# dashboard

./: .env  .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: app.css  app.svelte  main.ts
frontend/src/dashboard/: site.svelte
frontend/src/feedback/: site.svelte
frontend/src/issues/: site.svelte
frontend/src/main/: alert.svelte  header.svelte  sidebar.svelte
migrations/2025-10-03-085602-0000_create_accounts/: up.sql
migrations/2025-10-03-201909-0000_init/: down.sql  up.sql
migrations/2025-10-04-223241-0000_create_accounts/: down.sql  up.sql
migrations/2025-10-05-094314-0000_create_accounts/: up.sql
migrations/2025-10-05-143514-0000_create_accounts/: down.sql  up.sql
migrations/2025-10-05-192045-0000_create_accounts/: down.sql  up.sql
migrations/2025-10-08-194016-0000_create_accounts/: up.sql
migrations/2025-10-08-194631-0000_create_services/: down.sql  up.sql
public/: style.css
src/: auth.rs  component.rs  main.rs  route.rs
src/auth/: client.rs  guard.rs
src/component/: root.rs  util.rs
src/database/: connection.rs  model.rs  schema.rs
src/route/: dashboard.rs  feedback.rs  issues.rs  requests.rs  settings.rs  web.rs
templates/: base.html.j2  index.html.j2
templates/main/: alert.html.j2  header.html.j2  sidebar.html.j2
templates/route/: dashboard.html.j2  feedback.html.j2  issues.html.j2  requests.html.j2  settings.html.j2
testing/: compose.yml
(+38 files in other folders)
