[package]
name = "dashboard"
version = "0.0.0-nightly"
edition = "2024"

[dependencies]
# Development
dotenvy = "0.15.7"

# Error handling
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
color-eyre = "0.6.5"

# Web framework
rocket = { version = "0.5.1", features = ["tls"] }
maud = { version = "0.27.0", features = ["rocket"] }
moka = { version = "0.12.11", features = ["future"] }
uuid = { version = "1.18.1", features = ["v4"] }
constant_time_eq = "0.4.2"
tokio = "1.47.1"

# SQLite
diesel = { version = "2.3.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
diesel_migrations = "2.3.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
chrono = "0.4.42"

# OpenID
openidconnect = { version = "4.0.1", features = ["reqwest"] }